[package]
name = "powersoftau"
version = "0.1.1"
authors = ["Sean Bowe"]
license = "MIT/Apache-2.0"

description = "Communal zk-SNARK MPC for Public Parameters"
documentation = "https://docs.rs/powersoftau/"
homepage = "https://github.com/ebfull/powersoftau"
repository = "https://github.com/ebfull/powersoftau"

[dependencies]
rand = "0.3.17"
crossbeam = "0.3.0"
num_cpus = "1.7.0"
blake2 = "0.6.1"
generic-array = "0.8.3"
typenum = "1.9.0"
byteorder = "1.1.0"
#pairing = {git="https://github.com/devrandom/pairing.git", rev="rust_1_19_compat"}
pairing = "0.13.2"

[features]
u128-support = ["pairing/u128-support"]
